added navigation and 3 sections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,85 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ziro</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <!-- logo -->
+        <ul>
+          <li>home</li>
+          <li>pricing</li>
+          <li>blog</li>
+          <li>becom a member</li>
+          <li>about us</li>
+        </ul>
+        <!-- Search here.... -->
+        <ul>
+          <li>login</li>
+          <li>sing up</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h1>Find out talented freelancer with better review faster.</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip.
+        </p>
+        <button type="button">Discover Now</button>
+        <p>Watch Demo</p>
+      </section>
+      <section>
+        <p>How it works</p>
+        <h2>Start find a job you love with us easily</h2>
+        <h3>Complete Profile</h3>
+        <h3>Search Vacancies</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation.
+        </p>
+        <h3>Apply Job</h3>
+      </section>
+      <section>
+        <h2>Why Choose Us</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
+        <h3>Trusted</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna.
+        </p>
+        <h3>Easy to Use</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna.
+        </p>
+        <h3>Faster</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna.
+        </p>
+      </section>
+      <section>
+        <h2>Featured Jobs</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
