added images, finished the rest of the sections, added traps

--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
   <body>
     <header>
       <nav>
-        <!-- logo -->
+        <img src="./images/Logo.png" alt="logo" />
+        <p>ziro</p>
         <ul>
-          <li>home</li>
-          <li>pricing</li>
-          <li>blog</li>
-          <li>becom a member</li>
-          <li>about us</li>
+          <li><a href="#">home</a></li>
+          <li><a href="#">pricing</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">becom a member</a></li>
+          <li><a href="#">about us</a></li>
         </ul>
         <!-- Search here.... -->
         <ul>
-          <li>login</li>
-          <li>sing up</li>
+          <li><a href="#">login</a></li>
+          <li><a href="#">sing up</a></li>
         </ul>
       </nav>
     </header>
@@ -34,6 +35,7 @@
         </p>
         <button type="button">Discover Now</button>
         <p>Watch Demo</p>
+        <img src="./images/women.png" alt="girl with laptop" />
       </section>
       <section>
         <p>How it works</p>
@@ -77,11 +79,156 @@
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam.
         </p>
+        <img src="./images/boy.jpg" alt="boy" />
+        <h3>Database Programmer</h3>
+        <div>
+          <p>Marraz Team</p>
+          <p>$14,000 - $25,000 /monthly</p>
+          <p>London,Enlend View map</p>
+          <img src="./images/Group 54.png" alt="heart" />
+          <button type="button">Apply Now</button>
+        </div>
+        <img src="./images/boy2.jpg" alt="boy on glasses" />
+        <h3>Database Programmer</h3>
+        <div>
+          <p>Marraz Team</p>
+          <p>$14,000 - $25,000 /monthly</p>
+          <p>London,Enlend View map</p>
+          <img src="./images/Group 54 (1).png" alt="heart" />
+          <button type="button">Apply Now</button>
+        </div>
+        <img src="./images/boy.jpg" alt="boy" />
+        <h3>Database Programmer</h3>
+        <div>
+          <p>Marraz Team</p>
+          <p>$14,000 - $25,000 /monthly</p>
+          <p>London,Enlend View map</p>
+          <img src="./images/Group 54 (1).png" alt="heart" />
+          <button type="button">Apply Now</button>
+        </div>
+        <button type="button">View More</button>
       </section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section>
+        <h2>What Our Customer Says</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
+        <img src="./images/boy3.png" alt="guy with glasses" />
+        <h3>William Smith</h3>
+        <p>CEO OF THE LOVE STUDENTS</p>
+        <img src="./images/star.png" alt="star" />
+        <p>4.8</p>
+        <p>
+          “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam,quis nostrud exercitation ullamco laboris nisi ut
+          aliquip.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+          do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut
+          aliquip.”
+        </p>
+      </section>
+      <section>
+        <h3>36,789</h3>
+        <p>Talented Freelancer</p>
+        <h3>45,973</h3>
+        <p>Visitors</p>
+        <h3>56,461</h3>
+        <p>Contract Made</p>
+        <h3>852k</h3>
+        <p>Companies</p>
+      </section>
+      <section>
+        <h2>Pricing Plan</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
+        <ul>
+          <li>
+            <h3>FREE</h3>
+            <div>
+              <p>0</p>
+              <p>Per month</p>
+              <p>Lorem ipsum dolor sit amet.</p>
+              <p>Lorem ipsum dolor sit amet.</p>
+              <p>Sed do eiusmod tempor</p>
+              <button type="button">Purchase Now</button>
+            </div>
+          </li>
+          <li>
+            <h3>PREMIUM</h3>
+            <div>
+              <p>175</p>
+              <p>Per month</p>
+              <p>Lorem ipsum dolor sit amet.</p>
+              <p>Ut enim ad minim veniam.</p>
+              <p>Lorem ipsum dolor sit amet.</p>
+              <button type="button">Purchase Now</button>
+            </div>
+          </li>
+          <li>
+            <h3>PLATNIUM</h3>
+            <div>
+              <p>500</p>
+              <p>Per month</p>
+              <p>Lorem ipsum dolor sit amet.</p>
+              <p>Ut enim ad minim veniam.</p>
+              <p>Sed do eiusmod tempor</p>
+              <button type="button">Purchase Now</button>
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <h3>Olearn</h3>
+      <ul>
+        <li>About</li>
+        <li>What we offer</li>
+        <li>Leadership</li>
+        <li>Careers</li>
+      </ul>
+      <h3>Courses</h3>
+      <ul>
+        <li>Classroom Courses</li>
+        <li>Virtual Courses</li>
+        <li>E-Learning Courses</li>
+        <li>Off Line Courses</li>
+      </ul>
+      <h3>Community</h3>
+      <ul>
+        <li>Learner</li>
+        <li>Partners</li>
+        <li>Developers</li>
+        <li>Teaching Centre</li>
+      </ul>
+      <h3>Quick Links</h3>
+      <ul>
+        <li>Home</li>
+        <li>Professional Edu</li>
+        <li>Courses</li>
+        <li>Admissions</li>
+      </ul>
+      <h3>More</h3>
+      <ul>
+        <li>Press</li>
+        <li>Inventors</li>
+        <li>Helps</li>
+        <li>Terms</li>
+      </ul>
+      <img src="./images/Logo.png" alt="Logo" />
+      <p>ziro</p>
+      <ul>
+        <li><a href="#"></a>Terms of Use</li>
+        <li><a href="#"></a>Protfolio</li>
+        <li><a href="#"></a>Privacy policy</li>
+        <li><a href="#"></a>Contact us</li>
+        <li><a href="#"></a>FAQ</li>
+      </ul>
+    </footer>
   </body>
 </html>
