added the rest of the images and renamed the image

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         <img src="./images/women.png" alt="girl with laptop" />
       </section>
       <section>
+        <img src="./images/de singn studio.png" alt="de singn studio" />
+        <img src="./images/design and branding.png" alt="design and branding" />
+        <img src="./images/greenery.png" alt="greenery" />
+        <img src="./images/natural.png" alt="natural" />
+        <img src="./images/nature.png" alt="nature" />
+        <img src="./images/your company.png" alt="your company" />
         <p>How it works</p>
         <h2>Start find a job you love with us easily</h2>
         <h3>Complete Profile</h3>
@@ -79,6 +85,8 @@
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam.
         </p>
+        <img src="./images/left arrow.png" alt="left arrow" />
+        <img src="./images/right arrow.png" alt="right arrow" />
         <img src="./images/boy.jpg" alt="boy" />
         <h3>Database Programmer</h3>
         <div>
@@ -88,7 +96,7 @@
           <img src="./images/Group 54.png" alt="heart" />
           <button type="button">Apply Now</button>
         </div>
-        <img src="./images/boy2.jpg" alt="boy on glasses" />
+        <img src="./images/guy with glasses.jpg" alt="boy on glasses" />
         <h3>Database Programmer</h3>
         <div>
           <p>Marraz Team</p>
@@ -115,11 +123,13 @@
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam.
         </p>
-        <img src="./images/boy3.png" alt="guy with glasses" />
+        <img
+          src="./images/guy in a hat and glasses.png"
+          alt="guy with glasses"
+        />
         <h3>William Smith</h3>
         <p>CEO OF THE LOVE STUDENTS</p>
         <img src="./images/star.png" alt="star" />
-        <p>4.8</p>
         <p>
           “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -129,6 +139,9 @@
           ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut
           aliquip.”
         </p>
+        <img src="./images/left arrow.png" alt="left arrow" />
+        <img src="./images/right arrow.png" alt="right arrow" />
+        <img src="./images/icons.png" alt="icons" />
       </section>
       <section>
         <h3>36,789</h3>
