added style file and styling

--- a/index.html
+++ b/index.html
@@ -4,36 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ziro</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <img src="./images/Logo.png" alt="logo" />
+        <img src="./images/Logo-Main.png" alt="logo" />
         <p>ziro</p>
         <ul>
-          <li><a href="#">home</a></li>
-          <li><a href="#">pricing</a></li>
-          <li><a href="#">blog</a></li>
-          <li><a href="#">becom a member</a></li>
-          <li><a href="#">about us</a></li>
+          <li><a class="link" chref="#">home</a></li>
+          <li><a class="link" chref="#">pricing</a></li>
+          <li><a class="link" chref="#">blog</a></li>
+          <li><a class="link" chref="#">becom a member</a></li>
+          <li><a class="link" chref="#">about us</a></li>
         </ul>
         <!-- Search here.... -->
         <ul>
-          <li><a href="#">login</a></li>
-          <li><a href="#">sing up</a></li>
+          <li><a class="link" chref="#">login</a></li>
+          <li><a class="link" chref="#">sing up</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section>
-        <h1>Find out talented freelancer with better review faster.</h1>
+        <h1 class="hero-taitle">
+          Find out talented <span class="accent">freelancer</span> with better
+          review faster.
+        </h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
           aliquip.
         </p>
-        <button type="button">Discover Now</button>
+        <button class="button-taitle" type="button">Discover Now</button>
         <p>Watch Demo</p>
         <img src="./images/women.png" alt="girl with laptop" />
       </section>
