changed the ten and stole the sections

--- a/index.html
+++ b/index.html
@@ -48,16 +48,27 @@
         <img src="./images/natural.png" alt="natural" />
         <img src="./images/nature.png" alt="nature" />
         <img src="./images/your company.png" alt="your company" />
-        <p>How it works</p>
-        <h2>Start find a job you love with us easily</h2>
-        <h3>Complete Profile</h3>
-        <h3>Search Vacancies</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation.
-        </p>
-        <h3>Apply Job</h3>
+        <p class="smal-text">How it works</p>
+        <h2 class="search-section">Start find a job you love with us easily</h2>
+        <ul>
+          <li class="columns">
+            <div class="numer-one">1</div>
+            Complete Profile
+          </li>
+          <li class="columns">
+            <div class="numer-two">2</div>
+            Search Vacancies
+            <p class="columns-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation.
+            </p>
+          </li>
+          <li class="columns">
+            <div class="numer-three">3</div>
+            Apply Job
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Why Choose Us</h2>
