add style taitle

--- a/index.html
+++ b/index.html
@@ -71,27 +71,42 @@
         </ul>
       </section>
       <section>
-        <h2>Why Choose Us</h2>
-        <p>
+        <h2 class="taitle-us">Why Choose Us</h2>
+        <p class="text-us">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam.
         </p>
-        <h3>Trusted</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna.
-        </p>
-        <h3>Easy to Use</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna.
-        </p>
-        <h3>Faster</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna.
-        </p>
+        <ul>
+          <li>
+            <img class="compass-one" src="./images/conpass.png" alt="compass" />
+            <div class="Trusted">Trusted</div>
+            <p class="text-t">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna.
+            </p>
+          </li>
+          <li>
+            <img class="compass-two" src="./images/conpass.png" alt="compass" />
+            <div class="Easy-to-Use">Easy to Use</div>
+            <p class="text-e">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna.
+            </p>
+          </li>
+          <li>
+            <img
+              class="compss-three"
+              src="./images/conpass.png"
+              alt="compass"
+            />
+            <div class="Faster">Faster</div>
+            <p class="text-f">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Featured Jobs</h2>
