--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         </ul>
       </section>
       <section>
-        <h2>Featured Jobs</h2>
-        <p>
+        <h2 class="title-jobs">Featured Jobs</h2>
+        <p class="text-job">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam.
@@ -121,7 +121,7 @@
         <h3>Database Programmer</h3>
         <div>
           <p>Marraz Team</p>
-          <p>$14,000 - $25,000 /monthly</p>
+          <p>&#128176; &dollar;14,000 - &dollar;25,000 /monthly</p>
           <p>London,Enlend View map</p>
           <img src="./images/Group 54.png" alt="heart" />
           <button type="button">Apply Now</button>
@@ -130,7 +130,7 @@
         <h3>Database Programmer</h3>
         <div>
           <p>Marraz Team</p>
-          <p>$14,000 - $25,000 /monthly</p>
+          <p>&dollar;14,000 - &dollar;25,000 /monthly</p>
           <p>London,Enlend View map</p>
           <img src="./images/Group 54 (1).png" alt="heart" />
           <button type="button">Apply Now</button>
@@ -139,7 +139,7 @@
         <h3>Database Programmer</h3>
         <div>
           <p>Marraz Team</p>
-          <p>$14,000 - $25,000 /monthly</p>
+          <p>&dollar;14,000 - &dollar;25,000 /monthly</p>
           <p>London,Enlend View map</p>
           <img src="./images/Group 54 (1).png" alt="heart" />
           <button type="button">Apply Now</button>
